stuck with a object bug

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ a:hover{
     width: 100%;
 }
 .routes{
-    padding: 20px;
+    padding: 3rem 1rem;
 }
 .logo{
     margin:0 0 0 15px;
@@ -291,7 +291,7 @@ a:hover{
     justify-content: space-between !important;
 }
 .news-title{
-width: 70%;
+width: 60%;
 }
 
 .news-image-container .img{
@@ -300,14 +300,20 @@ width: 70%;
 }
 .news-card p{
     color: black;
-    margin: 10px 0px !important;
+    margin: 20px 0px !important;
 }
 .provider-container{
     display: flex;
     justify-content: space-between;
 }
+.provider-container > div{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
 .provider-name{
-    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .chart-header{
